# mqlalchemy

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci-cd.yml  publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  modules.rst  mqlalchemy.rst  mqlalchemy.tests.rst  support.rst  tests.rst
mqlalchemy/: AUTHORS  LICENSE  __init__.py  _compat.py  utils.py
mqlalchemy/tests/: __init__.py  models.py
tests/: __init__.py  models.py
